--- a/ui/tmto/templates/function3.html
+++ b/ui/tmto/templates/function3.html
@@ -98,7 +98,7 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-d
                                         </div> -->
                                         <div class="form-group">
                                             <label>Enter 'N'</label>
-                                            <input if='n' class="form-control" placeholder="Enter a power of 2 number" />
+                                            <input id='n' class="form-control" placeholder="Enter a power of 2 number" />
                                         </div>
                                         <!-- <div class="form-group"> -->
                                         <!--    <label>File input</label>
@@ -109,13 +109,13 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-d
                                             <input id='m' class="form-control" placeholder="Enter a number between 1 & N" />
                                         </div>
                                         <!-- <br> -->
-                                        <!-- <div class="form-group"> -->
+                                        <div class="form-group">
                                         <div class="checkbox">
                                             <label>
                                                 <input type="checkbox" id="manualKey" onclick="var input = document.getElementById('key'); if(this.checked){ input.disabled = false; input.focus();}else{input.disabled=true;}" />Manually provide Key
                                             </label>
                                         </div>
-                                    <!-- </div> -->
+                                    </div>
                                         
                                             <div class="form-group">
                                                 <label>Enter Key</label>
