--- a/ui/tmto/templates/function1.html
+++ b/ui/tmto/templates/function1.html
@@ -111,11 +111,11 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-d
 											</div>
 										<br>
 										<!-- <div class="form-group"> -->
-										<div class="checkbox">
+										<!-- <div class="checkbox">
 											<label>
 												<input type="checkbox" id="manualKey" onclick="var input = document.getElementById('key'); if(this.checked){ input.disabled = false; input.focus();}else{input.disabled=true;}" />Manually provide Key
 											</label>
-										</div>
+										</div> -->
 									<!-- </div> -->
 										<br>
 										<br>
@@ -166,10 +166,10 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-d
 													<option value = 'AES'>AES</option>
 												</select>
 											</div>
-											<div class="form-group">
+											<!-- <div class="form-group">
 												<label>Enter Key</label>
 												<input class="form-control" id="key" type="text" placeholder="Enter key" disabled/>
-											</div>
+											</div> -->
 											<br>
 											<div class="col-xs-6 text-center"> 
 												<button type="reset" class="btn btn-danger" onclick="var input = document.getElementById('key'); input.disabled = true;" id="resetButton">Reset Button</button>
@@ -210,10 +210,10 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-d
 			var plainText = $('#plainText').val();
             var iter = $('#iter').val();
             var cipher = $('#cipher').val();
-            var key;
-            if( document.getElementById('manualKey').checked ){
-            	key = $('#key').val();
-        	}
+            // var key;
+         //    if( document.getElementById('manualKey').checked ){
+         //    	key = $('#key').val();
+        	// }
 			e.preventDefault();
 			$.ajax({
 	            type: 'POST',
@@ -223,7 +223,7 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-d
 	            		'plainText':plainText,
 	            		'iter':iter,
 	            		'cipher':cipher,
-	            		'key':key
+	            		// 'key':key
 	            		// 'csrfmiddlewaretoken':$('input[name=csrfmiddlewaretoken]').val()
 	            		},
 	            success: function(data) {
