--- a/ui/tmto/templates/function3.html
+++ b/ui/tmto/templates/function3.html
@@ -35,7 +35,7 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-d
             <div class="sidebar-collapse">
                 <ul class="nav" id="main-menu">
 				<li class="text-center">
-                    <img src="static/img/find_user.png" class="user-image img-responsive"/>
+                    <img src="static/img/find_user.jpg" class="user-image img-responsive"/>
 					</li>
 				
 					
@@ -233,6 +233,12 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-d
                 }
             });
         });
+    </script>
+    <script type="text/javascript">  
+                $(".modal").on("hidden.bs.modal", function(){
+                    $(".modal-body").html("<p>Processing...</p>");
+                });
+
     </script>
     
    
