--- a/ui/tmto/templates/function3.html
+++ b/ui/tmto/templates/function3.html
@@ -28,7 +28,7 @@
   <div style="color: white;
 padding: 15px 50px 5px 50px;
 float: right;
-font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-danger square-btn-adjust">Logout</a> </div>
+font-size: 14px;"> Developed under the guidance of Dr. Sugata Gangopadhyay &nbsp;</div>
         </nav>   
            <!-- /. NAV TOP  -->
                 <nav class="navbar-default navbar-side" role="navigation">
@@ -55,13 +55,13 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-d
                         <a  href="table.html"><i class="fa fa-table fa-3x"></i> Table Examples</a>
                     </li> -->
                      <li  >
-                        <a  href="function1"><i class="fa fa-edit fa-3x"></i> Function 1 </a>
+                        <a  href="function1"><i class="fa fa-edit fa-3x"></i> Analyse m-t </a>
                     </li>    
                     <li  >
-                        <a  href="function2"><i class="fa fa-edit fa-3x"></i> Function 2 </a>
-                    </li> 
+                        <a  href="function2"><i class="fa fa-edit fa-3x"></i> Iterate </a>
+                    </li>    
                     <li  >
-                        <a class="active-menu"  href="function3"><i class="fa fa-edit fa-3x"></i> Function 3 </a>
+                        <a  href="function3"><i class="fa fa-edit fa-3x"></i> Single Attack </a>
                     </li>	
                 </ul>
                
@@ -73,7 +73,7 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-d
             <div id="page-inner">
                 <div class="row">
                     <div class="col-md-12">
-                     <h2>Function 3</h2>
+                     <h2>Single Attack</h2>
                     </div>
                 </div>
                  <!-- /. ROW  -->
@@ -112,7 +112,7 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-d
                                         <div class="form-group">
                                         <div class="checkbox">
                                             <label>
-                                                <input type="checkbox" id="manualKey" onclick="var input = document.getElementById('key'); if(this.checked){ input.disabled = false; input.focus();}else{input.disabled=true;}" />Manually provide Key
+                                                <input type="checkbox" id="manualKey" onclick="var input = document.getElementById('key'); if(this.checked){ input.disabled = false; input.focus();}else{input.value='';input.disabled=true;}" />Manually provide Key
                                             </label>
                                         </div>
                                     </div>
@@ -137,6 +137,7 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-d
                                                         <h4 class="modal-title">Output</h4>
                                                       </div>
                                                       <div class="modal-body">
+                                                        <img src="static/img/loader.gif" class="img-responsive center-block"/>
                                                         <p>Processing...</p>
                                                       </div>
                                                       <div class="modal-footer">
@@ -174,6 +175,7 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-d
                                             <label>Enter 't'</label>
                                             <input id="t" class="form-control" placeholder="Enter any number" />
                                         </div>
+                                        <br>
                                         <br>
                                             <div class="col-xs-6 text-center"> 
                                                 <button id="resetButton" type="reset" class="btn btn-danger" onclick="var input = document.getElementById('key'); input.disabled = true;">Reset Button</button>
@@ -236,7 +238,7 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-d
     </script>
     <script type="text/javascript">  
                 $(".modal").on("hidden.bs.modal", function(){
-                    $(".modal-body").html("<p>Processing...</p>");
+                    $(".modal-body").html('<img src="static/img/loader.gif" class="img-responsive center-block"/><p>Processing...</p>');
                 });
 
     </script>
