--- a/ui/tmto/templates/index.html
+++ b/ui/tmto/templates/index.html
@@ -27,10 +27,10 @@
                 </button>
                 <a class="navbar-brand" href="/tmto">{{title}}</a> 
             </div>
-  <div style="color: white;
+<div style="color: white;
 padding: 15px 50px 5px 50px;
 float: right;
-font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-danger square-btn-adjust">Logout</a> </div>
+font-size: 14px;"> Developed under the guidance of Dr. Sugata Gangopadhyay &nbsp;</div>
         </nav>   
            <!-- /. NAV TOP  -->
                 <nav class="navbar-default navbar-side" role="navigation">
@@ -57,13 +57,13 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-d
                         <a  href="table.html"><i class="fa fa-table fa-3x"></i> Table Examples</a>
                     </li> -->
                     <li  >
-                        <a  href="function1"><i class="fa fa-edit fa-3x"></i> Function 1 </a>
+                        <a  href="function1"><i class="fa fa-edit fa-3x"></i> Analyse m-t </a>
                     </li>    
                     <li  >
-                        <a  href="function2"><i class="fa fa-edit fa-3x"></i> Function 2 </a>
+                        <a  href="function2"><i class="fa fa-edit fa-3x"></i> Iterate </a>
                     </li>    
                     <li  >
-                        <a  href="function3"><i class="fa fa-edit fa-3x"></i> Function 3 </a>
+                        <a  href="function3"><i class="fa fa-edit fa-3x"></i> Single Attack </a>
                     </li>
                 </ul>
                
@@ -75,22 +75,21 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-d
             <div id="page-inner">
                 <div class="row">
                     <div class="col-md-12">
-                     <h2>Admin Dashboard</h2>   
-                        <h5>Welcome Guest </h5>
+                     <h2>What is TMTO ??</h2>
                     </div>
                 </div>              
                  <!-- /. ROW  -->
                   <hr />
-                <div class="row">
+                <!-- <div class="row">
                 <div class="col-md-4 col-sm-6 col-xs-6">           
             <div class="panel panel-back noti-box">
                 <span class="icon-box bg-color-red set-icon">
                     <i class="fa fa-envelope-o"></i>
                 </span>
                 <div class="text-box" >
-                    <p class="main-text">Function 1</p>
+                    <p class="main-te -->
                     <!-- <p class="text-muted">Messages</p> -->
-                </div>
+                <!-- </div>
              </div>
              </div>
                     <div class="col-md-4 col-sm-6 col-xs-6">           
@@ -99,9 +98,9 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-d
                     <i class="fa fa-bars"></i>
                 </span>
                 <div class="text-box" >
-                    <p class="main-text">Function 2</p>
+                    <p cla -->
                     <!-- <p class="text-muted">Remaining</p> -->
-                </div>
+              <!--   </div>
              </div>
              </div>
                     <div class="col-md-4 col-sm-6 col-xs-6">           
@@ -110,11 +109,11 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-d
                     <i class="fa fa-bell-o"></i>
                 </span>
                 <div class="text-box" >
-                    <p class="main-text">Function 3</p>
+                    <p clas -->
                     <!-- <p class="text-muted">Notifications</p> -->
-                </div>
+               <!--  </div>
              </div>
-             </div>
+             </div -->
                     <!-- <div class="col-md-3 col-sm-6 col-xs-6">           
             <div class="panel panel-back noti-box">
                 <span class="icon-box bg-color-brown set-icon">
@@ -126,23 +125,30 @@ font-size: 16px;"> Last access : 30 May 2014 &nbsp; <a href="#" class="btn btn-d
                 </div>
              </div>
              </div> -->
-            </div>
+            <!-- </div> -->
                  <!-- /. ROW  -->
                 <hr />                
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12">           
             <div class="panel panel-back noti-box">
-                <span class="icon-box bg-color-blue">
-                    <i class="fa fa-warning"></i>
-                </span>
                 <div class="text-box" >
-                    <p class="main-text">What is TMTO ?? </p>
-                    <p class="text-muted">How are we simulating it?</p>
-                    <hr />
+                   
                     <p class="text-muted">
                           <span class="text-muted color-bottom-txt"><i class="fa fa-edit"></i>
-                               Lorem ipsum dolor sit amet, consectetur adipiscing elit gthn. 
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit gthn. 
+                               Time-memory trade-off analyzes the trade-off between time and memory while solving a problem.
+                               <br>
+                                Simulations of three functionalities have been done.
+                                <ul>
+                                    <li  >
+                        <a  href="function1"><i class="fa"></i> Analyse m-t </a> - A 3d plot depicting observed P(S) for different values of ‘m’ and ‘t’.
+                    </li>    
+                    <li  >
+                        <a  href="function2"><i class="fa"></i> Iterate </a> -  Gives the probability of success P(S) for the given parameters
+                    </li>    
+                    <li  >
+                        <a  href="function3"><i class="fa"></i> Single Attack </a> - Search for the key using algorithm.
+                    </li>
+                                </ul>
                                </span>
                     </p>
                 </div>
